# japanese-ir-baselines

./: .gitignore  README.md  config.yaml  pyproject.toml
baselines/: prepare_dataset.py  prepare_datasets.py
baselines/datasets/: __init__.py  base.py  miracl_j.py  ntcir_1_j.py  ntcir_2_j.py  ntcir_data_search_j.py  ntcir_j.py
